vertical align fix on views tables

--- a/tapas_redesign/assets/sass/templates/views.scss
+++ b/tapas_redesign/assets/sass/templates/views.scss
@@ -58,3 +58,9 @@ h4.support-file .btn{
 table a:not(.btn), .table a:not(.btn){
   text-decoration: none;
 }
+
+.views-table{
+  td{
+    vertical-align: middle;
+  }
+}
