--- a/tapas_redesign/css/style.css
+++ b/tapas_redesign/css/style.css
@@ -11330,6 +11330,10 @@ table a:not(.btn), .table a:not(.btn) {
   text-decoration: none;
 }
 
+.views-table td {
+  vertical-align: middle;
+}
+
 .block {
   background-color: transparent;
   box-shadow: none;
